crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_tile_config_custom.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: cfg
---
TileConfig {
    tile_m: 64,
    tile_n: 128,
    tile_k: 16,
}
